# MasterThesis

./: README.md  main.py  pyproject.toml
DataSets/Derived/: port_turnaround_lookup_qa_bins.csv  port_turnaround_training.csv  port_turnaround_training.parquet  port_turnaround_training_counts.csv
DataSets/Derived/NorthernLights/: port_turnaround_lookup.csv  port_turnaround_lookup.parquet  port_turnaround_training.csv  port_turnaround_training.parquet  port_turnaround_training_counts.csv
DataSets/Derived/QA/: port_turnaround_group_counts.csv  port_turnaround_missingness_by_port.csv  port_turnaround_missingness_by_port_terminal.csv  port_turnaround_missingness_notes.txt  port_turnaround_training_overview.txt
DataSets/Derived/Stena/: port_turnaround_lookup.csv  port_turnaround_lookup.parquet  port_turnaround_lookup_qa_bins.csv  port_turnaround_training.csv  port_turnaround_training.parquet  port_turnaround_training_counts.csv
DataSets/Raw/General/: tablesWithColumns.csv
DataSets/Raw/General:dev/: allTables.csv
DataSets/Raw/NorthernLightsTest/: canal_reference.csv  cargo_asof_2025-12-31.csv  commodity_reference.csv  distances_export.csv  port_calls_completed_asof_2025-12-31.csv   (+2 more)
Models/: build_port_turnaround_dataset.py  build_sailing_time_dataset.py  fit_port_turnaround_model.py  plot_port_turnaround_model.py  port_turnaround_lookup.py  sailing_time_lookup.py  train_port_turnaround_model.py
QA/: port_turnaround_dataset_qa.py  port_turnaround_lookup_qa.py  sailing_time_dataset_qa.py
TextFiles/: contextHelper.txt  progressLog.txt  progressLog_Saga.txt  runGuide.txt
utils/: __init__.py  customer_paths.py
(+57 files in other folders)
